--- a/TimeTable/TimeTable/MainWindow.xaml
+++ b/TimeTable/TimeTable/MainWindow.xaml
@@ -4,9 +4,49 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:TimeTable"
+        xmlns:col="clr-namespace:System.Collections;assembly=mscorlib"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-        
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="517*"/>
+            <ColumnDefinition Width="283*"/>
+        </Grid.ColumnDefinitions>
+        <TabControl Grid.ColumnSpan="2" Height="NaN" Width="NaN" SelectionChanged="TabControl_SelectionChanged">
+            <TabItem Header="Главная страница">
+                <!--<Label Height="NaN" Content="Добро пожаловать, Козлова Ирина Никлоаевна" Margin="10,39,216,369" Width="NaN"/>
+                <Label Height="NaN" Content="13.05.2023 13:07" Margin="165,39,18,369" Width="NaN" Grid.Column="1"/>
+                <Button Content="Справочники" Height="NaN" Width="NaN" Margin="29,132,338,264"/>
+                <Button Content="Учебный план" Height="NaN" Width="NaN" Margin="29,198,338,198" Click="Button_Click"/>
+                <Button Content="Расписание" Height="NaN" Width="NaN" Margin="29,266,338,130" Click="Button_Click"/>
+                <Button Content="Отчеты" Height="NaN" Width="NaN" Margin="29,329,338,67" Click="Button_Click"/>
+                <Button Content="Справка" Height="NaN" Width="NaN" Margin="93,127,40,269" Click="Button_Click" Grid.Column="1"/>-->
+            </TabItem>
+            <TabItem Header="Справочники">
+                <Grid Background="#FFE5E5E5"/>
+            </TabItem>
+            <TabItem Header="Учебный план">
+                <Grid Background="#FFE5E5E5"/>
+            </TabItem>
+            <TabItem Header="Расписание">
+                <Grid Background="#FFE5E5E5"/>
+            </TabItem>
+            <TabItem Header="Отчеты">
+                <Grid Background="#FFE5E5E5"/>
+            </TabItem>
+            <TabItem Header="Справка">
+                <Grid Background="#FFE5E5E5"/>
+            </TabItem>
+            <TabItem Header="Выход">
+                <Grid Background="#FFE5E5E5"/>
+            </TabItem>
+        </TabControl>
+        <Label Height="NaN" Content="Добро пожаловать, Козлова Ирина Николаевна" Margin="10,39,216,369" Width="NaN"/>
+        <Label Height="NaN" Content="13.05.2023 13:17" Margin="165,39,18,369" Width="NaN" Grid.Column="1"/>
+
+        <Button Content="Отчет расписания по преподавателям" Height="NaN" Width="NaN" Margin="40,164,214,232" Click="Button_Click"/>
+        <Button Content="Отчет расписания по группам" Height="NaN" Width="NaN" Margin="40,102,214,294" Click="Button_Click"/>
+        <Button Content="Отчет расписания по предметам" Height="NaN" Width="NaN" Margin="40,227,214,169" Click="Button_Click"/>
+
     </Grid>
 </Window>
