--- a/TimeTable/TimeTable/WPF/Pages/PageTimetable.xaml
+++ b/TimeTable/TimeTable/WPF/Pages/PageTimetable.xaml
@@ -4,11 +4,25 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:TimeTable.WPF.Pages"
+      xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
       mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800"
-      Title="PageTimetable">
+      d:DesignHeight="600" d:DesignWidth="1200"
+      Title="Страница расписания">
 
-    <Grid>
-        
+    <Grid Background="#FFE5E5E5">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition/>
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="Auto"/>
+            <ColumnDefinition/>
+        </Grid.ColumnDefinitions>
+        <DockPanel Grid.Row="0" Grid.ColumnSpan="2">
+            <TextBlock Text=""/>
+        </DockPanel>
+        <DataGrid Grid.Row="1" Grid.Column="0">
+            
+        </DataGrid>
     </Grid>
 </Page>
